kube/bin/jenkins.ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/tls-acme: "true"
  name: jenkins
  namespace: jenkins
spec:
  tls:
  - hosts:
    - jenkins.jenkins.gce.k8m.io
    - jenkins.jenkins.gke.k8m.io
    - jenkins.jenkins.mini.k8m.io
  - secretName: jenkins
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: jenkins.jenkins.gce.k8m.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
    - host: jenkins.jenkins.gke.k8m.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
    - host: jenkins.jenkins.mini.k8m.io
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
